<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/content_label"
        android:id="@+id/textView"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/content_radio_group">
        <RadioButton android:id="@+id/radio_lorem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem_ipsum_title"/>
        <RadioButton android:id="@+id/radio_samuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/samuel_l_ipsum_title"/>
        <RadioButton android:id="@+id/radio_bacon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bacon_ipsum_title"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fragment_label"
        android:id="@+id/textView2"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/fragment_radio_group">
        <RadioButton android:id="@+id/radio_fragment_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_a"/>
        <RadioButton android:id="@+id/radio_fragment_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_b"/>
        <RadioButton android:id="@+id/radio_fragment_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_c"/>
    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/load_fragment_button"
        android:id="@+id/load_button" />

</LinearLayout>
