<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/author_label"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/author"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/github_link"
        android:id="@+id/button2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/presentation_link"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/signature"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />
</LinearLayout>